--- a/ArmaTuFecha/pom.xml
+++ b/ArmaTuFecha/pom.xml
@@ -61,7 +61,11 @@
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
         </dependency>
-				
+		
+		<dependency>
+           <groupId> nz.net.ultraq.thymeleaf</groupId>
+           <artifactId>thymeleaf-layout-dialect</artifactId>
+       </dependency>		
 		
 		
 	</dependencies>
