--- a/ArmaTuFecha/pom.xml
+++ b/ArmaTuFecha/pom.xml
@@ -65,8 +65,14 @@
 		<dependency>
            <groupId>nz.net.ultraq.thymeleaf</groupId>
            <artifactId>thymeleaf-layout-dialect</artifactId>
-       </dependency>		
-		
+        </dependency>	
+       
+        <dependency>
+	    	<groupId>org.simplejavamail</groupId>
+	    	<artifactId>simple-java-mail</artifactId>
+	    	<version>5.0.3</version>
+		</dependency>	
+			
 		
 	</dependencies>
 
