--- a/ArmaTuFecha/src/main/resources/application.properties
+++ b/ArmaTuFecha/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 server.port = 8081
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+sendgrid.apikey=${MAIL_PASSWORD}
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${DATABASE_USERNAME}
+spring.datasource.password=${DATABASE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
